--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                     <section className="bg-economy-blue text-white pt-10 pb-24 px-6 md:px-12 text-center">
                         <div className="max-w-2xl mx-auto space-y-8">
                             <h3 className="text-2xl font-bold font-mono uppercase tracking-widest text-economy-green mb-4">
-                                ¿Lista para el próximo rodaje?
+                                ¿Lista para el próximo video?
                             </h3>
                             
                             <p className="text-gray-300 mb-8">
