--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
 
         const WhatsAppButton = ({ name }) => {
             const phoneNumber = "59175411570";
-            const message = `Hola, soy ${name}. Estoy listo para unirme al equipo de Comunicación y Producción 2026.`;
+            const message = `Hola, soy ${name}.
+Estoy lista para unirme al equipo de Comunicación de la carrera de Economía 01/2026`;
             const whatsappUrl = `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`;
 
             return (
@@ -371,7 +372,6 @@
                                             <span className="flex items-center gap-1"><CheckCircle className="w-4 h-4 text-economy-green"/> Imagen Institucional</span>
                                             <span className="flex items-center gap-1"><CheckCircle className="w-4 h-4 text-economy-green"/> Edición de Video</span>
                                             <span className="flex items-center gap-1"><CheckCircle className="w-4 h-4 text-economy-green"/> Creación de Contenido</span>
-                                            <span className="flex items-center gap-1"><CheckCircle className="w-4 h-4 text-economy-green"/> Redacción Creativa</span>
                                         </div>
                                     </div>
                                 </div>
@@ -395,7 +395,8 @@
                             </h3>
                             
                             <p className="text-gray-300 mb-8">
-                                Creemos en ti y en tu talento, queremos seguir creciendo, aprendiendo y mejorando contigo en el equipo. <br/>
+                                Creemos en ti y en tu talento, queremos seguir creciendo, aprendiendo y mejorando contigo en el equipo.
+                                <br/><br/>
                                 Solo necesitas confirmar tu participación. <br/>
                                 Tienes hasta el <span className="text-white font-bold border-b border-economy-green">23 de Enero, 2026</span>.
                             </p>
