--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ Estoy lista para unirme al equipo de Comunicación de la carrera de Economía 01
                             </h3>
                             
                             <p className="text-gray-300 mb-8">
-                                Creemos en ti y en tu talento, queremos seguir creciendo, aprendiendo y mejorando contigo en el equipo.
+                                Creemos en ti y en tu talento, queremos seguir creciendo, aprendiendo y mejorando <span className="text-white font-bold border-b border-economy-green">contigo en el equipo</span>.
                                 <br/><br/>
                                 Solo necesitas confirmar tu participación. <br/>
                                 Tienes hasta el <span className="text-white font-bold border-b border-economy-green">23 de Enero, 2026</span>.
